tests/chainsaw/restrict-seccomp/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-seccomp-unconfined
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: Unconfined
