tests/chainsaw/restrict-seccomp/good-pod-localhost.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-seccomp-localhost
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: Localhost
        localhostProfile: my-profile.json
      capabilities:
        drop:
        - ALL
